fix: assign font color black in mobile dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #ffffff;
+  color: #000000;
 }
 
 a {
